--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,13 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.1.7 (unreleased)
+
+** libgnutls: Simplified DTLS sliding window implementation.
+
+** API and ABI modifications:
+No changes since last version.
+
 * Version 3.1.6 (released 2013-01-02)
 
 ** libgnutls: Fixed record padding parsing issue. Reported by Kenny
