--- a/doc/cha-auth.texi
+++ b/doc/cha-auth.texi
@@ -2,24 +2,33 @@
 @chapter Authentication methods
 @cindex authentication methods
 
-@menu
-* Selecting the appropriate authentication method::
-* Certificate authentication::
-* More on certificate authentication::
-* Shared-key and anonymous authentication::
-@end menu
-
-@node Selecting the appropriate authentication method
-@section Selecting the appropriate authentication method
-
 The initial key exchange of the TLS protocol performs authentication
 of the peers. In typical scenarios the server is authenticated to
 the client, and optionally the client to the server.
 
-While many people associate TLS with X.509 certificates and public key
+While many associate TLS with X.509 certificates and public key
 authentication, the protocol supports various authentication methods,
-including pre-shared keys, and passwords. The rest of this section
-provides some guidance on how to use the available authentication
+including pre-shared keys, and passwords. In this chapter a description
+of the existing authentication methods is provided, as well as some
+guidance on which use-cases each method can be used at.
+
+@menu
+* Certificate authentication::
+* More on certificate authentication::
+* Shared-key and anonymous authentication::
+* Selecting an appropriate authentication method::
+@end menu
+
+@include cha-cert-auth.texi
+
+@include cha-cert-auth2.texi
+
+@include cha-shared-key.texi
+
+@node Selecting an appropriate authentication method
+@section Selecting an appropriate authentication method
+
+This section provides some guidance on how to use the available authentication
 methods in @acronym{GnuTLS} in various scenarios.
 
 @subsection Two peers with an out-of-band channel
@@ -69,7 +78,7 @@ authentication}).
 To mitigate the uncertainty of the information exchanged in the first 
 connection other channels over the Internet may be used (e.g., @ref{Verifying a certificate using DANE}).
 
-@subsection A trusted third party is available
+@subsection Two peers and a trusted third party
 
 When a trusted third party is available the most suitable option is to use 
 certificate authentication (see @ref{Certificate authentication}). 
@@ -99,11 +108,4 @@ certificate and the server verifies that the client's public key remained
 the same (see @ref{Verifying a certificate using trust on first use
 authentication}).
 @end itemize
-
-
-@include cha-cert-auth.texi
-
-@include cha-cert-auth2.texi
-
-@include cha-shared-key.texi
 
