updated thanks file

--- a/THANKS
+++ b/THANKS
@@ -129,6 +129,22 @@ Patrick Pelletier               *code [at] funwithsoftware.org*
 Sean Buckheister                *s_buckhe [at] cs.uni-kl.de*
 Matthew Hall                    *mhall [at] mhcomputing.net*
 Lucas Fisher                    *lucas.fisher [at] gmail.com*
+Kikuchi Masashi                 *kikuchi [at] lepidum.co.jp*
+Bartosz Brachaczek              *b.brachaczek [at] gmail.com*
+Bernhard R. Link                *brlink [at] debian.org*
+Rob McMahon                     *robmcmahoncv [at] gmail.com*
+Mann Ern Kang                   *mann.ern.kang [at] gmail.com*
+Daniel Mierswa                  *impulze [at] impulze.org*
+B. Scott Michel                 *scottm [at] aero.org*
+Bruce Korb                      *bkorb [at] gnu.org*
+Nadhem Alfardan                 *Nadhem.Alfardan.2009 [at] live.rhul.ac.uk*
+Pino Toscano                    *pino [at] debian.org*
+Somchai Smythe                  *buraphalinuxserver [at] gmail.com*
+Cedric Arbogast                 *arbogast.cedric [at] gmail.com*
+Pavan Konjarla                  *pavan.konjarla [at] hp.com*
+Bill Randle                     *billr [at] neocat.org*
+Boyan Kasarov                   *bkasarov [at] gmail.com*
+Michael Weiser                  *michael [at] weiser.dinsnail.net*
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
