--- a/doc/latex/gnutls.tex
+++ b/doc/latex/gnutls.tex
@@ -60,11 +60,7 @@
 
 \input{cha-intro-tls}
 
-\input{cha-cert-auth}
-
-\input{cha-shared-key}
-
-\input{cha-cert-auth2}
+\input{cha-auth}
 
 \input{cha-tokens}
 
