--- a/doc/TODO
+++ b/doc/TODO
@@ -5,6 +5,9 @@ in order to avoid having people working on the same thing.
 Current list:
 * When importing a PKCS #11 certificate, check for its issuers to generate a
   chain (e.g. use the DN to retrieve possible signers).
+* Think about supporting the groups in RFC3526 and RFC5114. If other
+  implementations use them too we may be able to achieve some speedups
+  in DH (by knowing q).
 * Handle the following X.509 extensions:
    2.5.29.36: Policy Constraints
    2.5.29.33: Policy Mappings
