If trousers is not present define the TPM functions but have them return GNUTLS_E_UNIMPLEMENTED_FEATURE.

--- a/doc/cha-library.texi
+++ b/doc/cha-library.texi
@@ -97,7 +97,7 @@ options are given.
 --disable-openssl-compatibility
 --disable-libdane
 --without-p11-kit
---without-tpm
+--with-tpm
 --disable-dtls-srtp-support
 @end verbatim
 
