Stricter RSA PKCS #1 1.5 encoding and decoding. Reported by Kikuchi Masashi.

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,9 @@ See the end for copying conditions.
 
 Version 2.12.22 (unreleased)
 
+** libgnutls: Stricter RSA PKCS #1 1.5 encoding and decoding. Reported
+by Kikuchi Masashi.
+
 ** libgnutls: Updated gnulib
 
 ** API and ABI modifications:
