added babel (not sure why)

--- a/doc/latex/gnutls.tex
+++ b/doc/latex/gnutls.tex
@@ -17,7 +17,8 @@
 \usepackage{float}
 \usepackage{morefloats}
 \usepackage{quotchap}
-\usepackage[utf8]{inputenc}
+%\usepackage[utf8]{inputenc}
+\usepackage[greek,english]{babel}%for euro sign
 
 \DeclareGraphicsExtensions{.pdf}
 
