--- a/NEWS
+++ b/NEWS
@@ -3,13 +3,16 @@ Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005,
               2006, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-Version 2.12.22 (unreleased)
+Version 2.12.22 (released 2013-01-05)
 
 ** libgnutls: Stricter RSA PKCS #1 1.5 encoding and decoding. Reported
 by Kikuchi Masashi.
 
 ** libgnutls: Fixed record padding parsing issue. Reported by Kenny
 Patterson and Nadhem Alfardan.
+
+** libgnutls: gnutls_x509_privkey_import_pkcs8() will accept a 
+NULL password.
 
 ** libgnutls: Updated gnulib
 
