--- a/doc/cha-gtls-app.texi
+++ b/doc/cha-gtls-app.texi
@@ -9,6 +9,7 @@
 * Setting up the transport layer::
 * TLS handshake::
 * Data transfer and termination::
+* Buffered data transfer::
 * Handling alerts::
 * Priority Strings::
 * Selecting cryptographic key sizes::
@@ -800,6 +801,23 @@ A session can be deinitialized with the @funcref{gnutls_deinit} function.
 
 @showfuncdesc{gnutls_bye}
 @showfuncdesc{gnutls_deinit}
+
+@node Buffered data transfer
+@section Buffered data transfer
+
+Although @funcref{gnutls_record_send} is sufficient to transmit data
+to the peer, when many small chunks of data are to be transmitted
+it is inefficient and wastes bandwidth due to the TLS record
+overhead. In that case it is preferrable to combine the small chunks
+before transmission. The @emph{gnutls_sbuf} interface is a helper interface
+that provides that functionality.
+
+@showfuncdesc{gnutls_sbuf_init}
+
+@showfuncdesc{gnutls_sbuf_queue}
+
+@showfuncB{gnutls_sbuf_flush,gnutls_sbuf_deinit}
+
 
 @node Handling alerts
 @section Handling alerts
