updated docs for sbuf API.

--- a/doc/cha-functions.texi
+++ b/doc/cha-functions.texi
@@ -4,6 +4,7 @@
 
 @menu
 * Core TLS API::
+* High level TLS API::
 * Datagram TLS API::
 * X509 certificate API::
 * OCSP API::
@@ -24,6 +25,14 @@ The prototypes for the following functions lie in
 @file{gnutls/gnutls.h}.
 
 @include gnutls-api.texi
+
+@node High level TLS API
+@section High level TLS API
+
+The prototypes for the following functions lie in
+@file{gnutls/sbuf.h}.
+
+@include sbuf-api.texi
 
 @node Datagram TLS API
 @section Datagram TLS API
