GnuTLS Length Hiding patch.
- Remove random padding; use minimal padding with legacy interface
- With new interface, use LH when possible, that is in CBC mode or with the new padding extension
- Rename priority to "NEW_PADDING"
- gnutls-cli: add command line switch --ranges using LH when possible.
- Update documentation

Signed-off-by: Nikos Mavrogiannopoulos <nmav@gnutls.org>

--- a/doc/cha-gtls-app.texi
+++ b/doc/cha-gtls-app.texi
@@ -1020,10 +1020,11 @@ This is the default.
 @item %LATEST_RECORD_VERSION @tab
 will use the latest TLS version record version in client hello.
 
-@item %RANDOM_PADDING @tab
-will use random padding to all sent TLS records. This is negotiated
-using an extension. Use @funcref{gnutls_record_get_random_padding_status}
-to check whether this has been negotiated in the current session.
+@item %NEW_PADDING @tab
+will enable the new padding extension negotiation. If the new padding extension
+is negotiated, GnuTLS will use a more efficient length-hiding mechanism.
+Use @funcref{gnutls_range_can_use_length_hiding} to check whether length-hiding
+can be used in the current session.
 
 @end multitable
 @caption{Special priority string keywords.}
