introduced gnutls_cork() and gnutls_uncork().

--- a/NEWS
+++ b/NEWS
@@ -38,6 +38,8 @@ gnutls_x509_crt_set_dn: Added
 gnutls_x509_crt_set_issuer_dn: Added
 gnutls_x509_crq_set_dn: Added
 dane_state_set_dlv_file: Added
+gnutls_record_cork(): Added
+gnutls_record_uncork(): Added
 gnutls_record_send_range: Added
 gnutls_record_set_max_empty_records: Added
 gnutls_range_send_message: Added
