--- a/NEWS
+++ b/NEWS
@@ -17,10 +17,10 @@ or request from an RFC4514 string.
 ** libgnutls: Added the gnutls_sbuf_t structure and accompanying 
 functions to enable buffering in sending application data.
 
-** libgnutls: Added %RANDOM_PADDING priority string. It enables a new
-random padding mechanism in TLS allowing random padding in TLS records
-in all ciphersuites. Both the server and the client must support this
-extension. Its status can be checked using gnutls_record_get_random_padding_status().
+** libgnutls: Removed default random padding, and added a length-hiding interface instead,  together with a %NEW_PADDING priority string. The priority enables a new
+padding mechanism in TLS allowing arbitrary padding in TLS records
+in all ciphersuites, which makes length-hiding more efficient and solves some timing attacks. Both the server and the client must support this
+extension. Whether length-hiding can be used on a given session can be checked using gnutls_record_can_use_length_hiding().
 
 ** libgnutls-dane: Added function to specify a DLV file.
 
@@ -42,7 +42,6 @@ gnutls_record_cork(): Added
 gnutls_record_uncork(): Added
 gnutls_record_send_range: Added
 gnutls_record_set_max_empty_records: Added
-gnutls_range_send_message: Added
 gnutls_record_can_use_length_hiding: Added
 
 
