--- a/NEWS
+++ b/NEWS
@@ -40,6 +40,7 @@ gnutls_x509_crq_set_dn: Added
 dane_state_set_dlv_file: Added
 gnutls_record_cork(): Added
 gnutls_record_uncork(): Added
+gnutls_range_split: Added
 gnutls_record_send_range: Added
 gnutls_record_set_max_empty_records: Added
 gnutls_record_can_use_length_hiding: Added
