--- a/NEWS
+++ b/NEWS
@@ -7,18 +7,20 @@ See the end for copying conditions.
 ** certtool: Added option "dn" which allows to directly set the DN
 in a template from an RFC4514 string.
 
+** danetool: Added options: --dlv and --insecure. Suggested by Paul Wouters.
+
 ** libgnutls: DN variable 'T' was expanded to 'title'.
 
 ** libgnutls: Added functions to directly set the DN in a certificate
 or request from an RFC4514 string.
 
-** libgnutls: Several optimizations in the random generator.
+** libgnutls: Optimizations in the nonce level of the random generator.
 
 ** libgnutls: Simplified the DTLS sliding window implementation.
 
 ** libgnutls: The minimum DH bits accepted by a client are now set
 by the specified priority string. The current values correspond to the
-previous weak defaults (727 bits), except for the SECURE128 and SECURE192
+previous defaults (727 bits), except for the SECURE128 and SECURE192
 strings which increase the minimum to 1248 and 1776 respectively.
 
 ** libgnutls: Added the gnutls_sbuf_t structure and accompanying 
@@ -45,8 +47,8 @@ gnutls_x509_crt_set_dn: Added
 gnutls_x509_crt_set_issuer_dn: Added
 gnutls_x509_crq_set_dn: Added
 dane_state_set_dlv_file: Added
-gnutls_record_cork(): Added
-gnutls_record_uncork(): Added
+gnutls_record_cork: Added
+gnutls_record_uncork: Added
 gnutls_range_split: Added
 gnutls_record_send_range: Added
 gnutls_record_set_max_empty_records: Added
